--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>WB-Пилюгина, 10</title>
+  <title>WB-Миклухо-Маклая, 32А</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <div class="content"> 
       <div class="container">
         <h1 class="page-title">
-          WildBerries Пилюгина, 10</h1>
+          WildBerries Миклухо-Маклая, 32А</h1>
           <br>
         <p class="page-subtitle">
         Прямая трансляция
